--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <span class="sr-only">Prev</span>
             </a>
             <a href="#" class="button button-lg">
-                <i class="fas fa-pause fa-lg" aria-hidden="true" aria-hidden="true"></i>
-                <span onclick="play()" id="play" class="sr-only">Play</span>
+                <i class="fas fa-play fa-lg" id="play" aria-hidden="true" aria-hidden="true" onclick="play()"></i>
+                <span onclick="play()"  class="sr-only">Play</span>
             </a>
             <a href="index.html" class="button button-md">
                 <i class="fas fa-step-forward"></i>
